# workspace

ada/hello-world/: Makefile  greet.adb
ada/package/: Makefile  gmain.adb  greetings.adb  greetings.ads
awk/gawk/: hello.awk  notes.org
cpp/hello-gtest/: CMakeLists.txt
cpp/hello-gtest/lib/: CMakeLists.txt
cpp/hello-gtest/lib/include/: arithmetic.h
cpp/hello-gtest/lib/src/: arithmetic.cpp
cpp/hello-gtest/src/: CMakeLists.txt  main.cpp
cpp/hello-gtest/test/: CMakeLists.txt  test.cpp
cpp/imgui-test/: CMakeLists.txt  main.cpp
emacs/: .emacs
haskell/: readme.org
lisp/: hello.lisp  nucleotides.lisp
lisp/dna/: nucleotides.lisp  rosalind_dna.txt
racket/: euler1.rkt  euler2.rkt  euler3.rkt  fizz-buzz.rkt  sum-of-square.rkt
racket/Counting DNA Nucleotides/: #count.rkt#2#  count-nucleotide.rkt  count.rkt
scheme/: sicp-notes.html  sicp-notes.org  sicp-notes.tex
tcl-tk/: test.py  test.tcl
